--- a/dnsmasq-extra/files/data/custom.conf
+++ b/dnsmasq-extra/files/data/custom.conf
@@ -33,9 +33,9 @@ server=/edu.cn/114.114.115.115
 server=/aliyun.com/223.5.5.5
 server=/aliyun.com/180.76.76.76
 server=/aliyun.com/114.114.115.115
-server=/tencent.com/223.5.5.5
 server=/tencent.com/180.76.76.76
 server=/tencent.com/114.114.115.115
+server=/tencent.com/182.254.118.118
 
 # For CDNs
 server=/staticfile.org/#
@@ -50,10 +50,15 @@ server=/jsdelivr.net/#
 server=/jsdelivr.net/223.5.5.5
 server=/jsdelivr.net/180.76.76.76
 server=/jsdelivr.net/114.114.115.115
+server=/updates.cdn-apple.com/127.0.0.1#7201
 server=/updates.cdn-apple.com/127.0.0.1#7701
 server=/updates.cdn-apple.com/114.114.115.115
+server=/updates-http.cdn-apple.com/127.0.0.1#7201
 server=/updates-http.cdn-apple.com/127.0.0.1#7701
 server=/updates-http.cdn-apple.com/114.114.115.115
+server=/windowsupdate.com/127.0.0.1#7201
+server=/windowsupdate.com/127.0.0.1#7701
+server=/windowsupdate.com/114.114.115.115
 
 # For ADs
 address=/hao.centbrowser.cn/0.0.0.0
