--- a/dnsmasq-extra/files/data/custom.conf
+++ b/dnsmasq-extra/files/data/custom.conf
@@ -2,13 +2,14 @@
 conf-file=/etc/dnsmasq-extra.d/bogus.conf
 
 # For TeamViewer
-ipset=/teamviewer.com/ss_spec_dst_bp
-ipset=/teamviewer.com/ssr_spec_dst_bp
-ipset=/dyngate.com/ss_spec_dst_bp
 ipset=/dyngate.com/ssr_spec_dst_bp
-ipset=/tvcdn.de/ss_spec_dst_bp
-ipset=/tvcdn.de/ssr_spec_dst_bp
+ipset=/dyngate.com/ss_spec_dst_bp
 ipset=/googlerouter.com/ssr_spec_dst_bp
+ipset=/teamviewer.com/ssr_spec_dst_bp
+ipset=/teamviewer.com/ss_spec_dst_bp
+ipset=/tvcdn.de/ssr_spec_dst_bp
+ipset=/tvcdn.de/ss_spec_dst_bp
+ipset=/worldbank.org/ssr_spec_dst_bp
 
 # For Github
 ipset=/github.io/gfwlist
