--- a/dnsmasq-extra/files/data/custom.conf
+++ b/dnsmasq-extra/files/data/custom.conf
@@ -16,12 +16,14 @@ ipset=/github.io/gfwlist
 ipset=/githubusercontent.com/gfwlist
 
 # For PPA:dl.google.com
+server=/dl.google.com/127.0.0.1#7200
 server=/dl.google.com/127.0.0.1#7700
 server=/dl.google.com/101.102.103.104
 server=/dl.google.com/185.222.222.222
 server=/dl.google.com/112.121.178.187
 
 # For googleapis.cn
+server=/googleapis.cn/127.0.0.1#7200
 server=/googleapis.cn/127.0.0.1#7700
 server=/googleapis.cn/101.102.103.104
 server=/googleapis.cn/185.222.222.222
@@ -37,6 +39,11 @@ server=/aliyun.com/114.114.115.115
 server=/tencent.com/180.76.76.76
 server=/tencent.com/114.114.115.115
 server=/tencent.com/182.254.118.118
+
+# For AliCDN
+server=/tmall.hk/223.5.5.5
+server=/tmall.hk/223.6.6.6
+server=/tmall.hk/180.76.76.76
 
 # For CDNs
 server=/staticfile.org/#
