--- a/smartdns/files/smartdns.config
+++ b/smartdns/files/smartdns.config
@@ -9,6 +9,7 @@ config smartdns
 	list   ignore_ip        203.208.32.0/19
 	list   bootstrap        223.6.6.6
 	list   bootstrap        162.14.21.56
+	list   bootstrap        120.53.80.136
 	list   bootstrap        175.24.219.66
 #	list   bootstrap        114.114.115.115
 #	list   server_tls       8.8.8.8
