--- a/dnsmasq-extra/files/data/custom.conf
+++ b/dnsmasq-extra/files/data/custom.conf
@@ -34,6 +34,12 @@ server=/cnpmjs.org/223.5.5.5
 server=/cnpmjs.org/162.14.21.56
 server=/cnpmjs.org/114.114.115.115
 
+# For wuyou
+server=/wuyou.net/223.5.5.5
+server=/wuyou.net/162.14.21.56
+server=/wuyou.net/114.114.115.115
+# address=/wuyou.net/117.25.130.178
+
 # For ADs
 address=/hao.centbrowser.cn/
 address=/lb2345.com/
