--- a/dnsmasq-extra/files/data/custom.conf
+++ b/dnsmasq-extra/files/data/custom.conf
@@ -27,6 +27,9 @@ server=/staticfile.org/114.114.115.115
 server=/jsdelivr.net/223.5.5.5
 server=/jsdelivr.net/162.14.21.56
 server=/jsdelivr.net/114.114.115.115
+server=/ghproxy.com/223.5.5.5
+server=/ghproxy.com/162.14.21.56
+server=/ghproxy.com/114.114.115.115
 server=/fastgit.org/223.5.5.5
 server=/fastgit.org/162.14.21.56
 server=/fastgit.org/114.114.115.115
