--- a/dnsmasq-extra/files/data/custom.conf
+++ b/dnsmasq-extra/files/data/custom.conf
@@ -39,3 +39,12 @@ server=/wuyou.net/114.114.115.115
 # For ADs
 address=/hao.centbrowser.cn/
 address=/lb2345.com/
+ipset=/linkedin.com/xray_spec_dst_fw
+ipset=/kirklands.com/xray_spec_dst_fw
+ipset=/googlerouter.com/xray_spec_dst_bp
+ipset=/worldbank.org/xray_spec_dst_bp
+ipset=/globalsources.com/xray_spec_dst_bp
+ipset=/zjtaotao.com/xray_spec_dst_bp
+ipset=/teamviewer.com/xray_spec_dst_bp
+address=/linkedin.com/8.8.8.8
+address=/images.kirklands.com/8.8.8.8
