--- a/dnsmasq-extra/files/data/custom.conf
+++ b/dnsmasq-extra/files/data/custom.conf
@@ -57,3 +57,4 @@ address=/hao.centbrowser.cn/
 address=/lb2345.com/
 address=/linkedin.com/8.8.8.8
 address=/images.kirklands.com/8.8.8.8
+address=/time.android.com/203.107.6.88
