--- a/smartdns/Makefile
+++ b/smartdns/Makefile
@@ -1,19 +1,19 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=smartdns
-PKG_VERSION:=2022-04-06
-PKG_RELEASE:=Release36.1
+PKG_VERSION:=2022-05-03
+PKG_RELEASE:=Release36.all-best-ip
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.gz
 PKG_SOURCE_URL:=https://github.com/pymumu/smartdns.git
-PKG_SOURCE_VERSION:=24661c2419a81e660b11a0e3d35a3bc269cd4bfa
+PKG_SOURCE_VERSION:=34691154fb40fc9949aa7aabec3ec2045fc51059
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE)
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)/$(BUILD_VARIANT)/$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE)
 PKG_BUILD_PARALLEL:=1
 
 include $(INCLUDE_DIR)/package.mk
-MAKE_VARS += VER=$(PKG_RELEASE)\@$(PKG_VERSION)
+MAKE_VARS += VER=$(PKG_RELEASE)\@$(PKG_SOURCE_VERSION)\@$(PKG_VERSION)
 MAKE_PATH:=src
 
 define Package/smartdns
