--- a/smartdns/Makefile
+++ b/smartdns/Makefile
@@ -1,13 +1,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=smartdns
-PKG_VERSION:=2022-06-25
-PKG_RELEASE:=Release36.5
+PKG_VERSION:=2022-07-02
+PKG_RELEASE:=Release37.RC1
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.gz
 PKG_SOURCE_URL:=https://github.com/pymumu/smartdns.git
-PKG_SOURCE_VERSION:=db328640c867eaf3b4ea0ef6817c797e533bdc84
+PKG_SOURCE_VERSION:=4e2161c6fc51f8f6ee233a52c9b6eed82b816370
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE)
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)/$(BUILD_VARIANT)/$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE)
 PKG_BUILD_PARALLEL:=1
