--- a/smartdns/files/smartdns.config
+++ b/smartdns/files/smartdns.config
@@ -5,7 +5,7 @@ config smartdns
 	option enable_cdn_cn    0
 	option port             7700
 	option ipv6             no
-	option prefetch         yes
+	option cache            no
 	list   ignore_ip        113.197.104.0/23
 	list   ignore_ip        203.208.32.0/19
 	list   bootstrap        223.6.6.6
@@ -27,7 +27,7 @@ config smartdns
 	list   server_https     https://odvr.nic.cz/doh
 #	list   server_https     https://dns.google/dns-query
 #	list   server_https     https://doh.dns.sb/dns-query
-	list   server_https     https://i.233py.com/dns-query
+#	list   server_https     https://i.233py.com/dns-query
 #	list   server_https     https://dns.233py.com/dns-query
 	list   server_https     https://a.passcloud.xyz/dns-query
 	list   server_https     https://dns11.quad9.net/dns-query
