--- a/dnsmasq-extra/files/data/custom.conf
+++ b/dnsmasq-extra/files/data/custom.conf
@@ -3,12 +3,19 @@ conf-file=/etc/dnsmasq-extra.d/bogus.conf
 
 # For Force-Forward
 ipset=/g.cn/xray_spec_dst_fw
+ipset=/g.cn/ssr_spec_dst_fw
 ipset=/linkedin.com/xray_spec_dst_fw
+ipset=/linkedin.com/ssr_spec_dst_fw
 ipset=/kirklands.com/xray_spec_dst_fw
+ipset=/kirklands.com/ssr_spec_dst_fw
 ipset=/worldbank.org/xray_spec_dst_bp
+ipset=/worldbank.org/ssr_spec_dst_fw
 ipset=/globalsources.com/xray_spec_dst_bp
+ipset=/globalsources.com/ssr_spec_dst_fw
 ipset=/zjtaotao.com/xray_spec_dst_bp
+ipset=/zjtaotao.com/ssr_spec_dst_fw
 ipset=/teamviewer.com/xray_spec_dst_bp
+ipset=/teamviewer.com/ssr_spec_dst_fw
 
 # For Mirrors
 server=/edu.cn/223.5.5.5
@@ -40,6 +47,7 @@ server=/linkedin.com/8.8.8.8
 server=/kirklands.com/8.8.8.8
 server=/yandex.com/8.8.8.8
 server=/kroger.com/8.8.8.8
+server=/campingworld.com/8.8.8.8
 
 # For wuyou
 server=/wuyou.net/223.5.5.5
