--- a/dnsmasq-extra/files/dnsmasq-extra.conf
+++ b/dnsmasq-extra/files/dnsmasq-extra.conf
@@ -8,8 +8,8 @@ config general
 	list plugins             'smartdns'
 	list plugins             'dnsproxy'
 	list pluginsOtcp         'xray'
-	list pluginsOtcp         'ss-tunnel'
-	list pluginsOtcp         'ssr-tunnel'
+#	list pluginsOtcp         'ss-tunnel'
+#	list pluginsOtcp         'ssr-tunnel'
 	option overwrite_resolve  0
 	option overwrite_aiodns   0
 	option overwrite_smartdns 0
