--- a/smartdns/Makefile
+++ b/smartdns/Makefile
@@ -1,13 +1,13 @@
 include $(TOPDIR)/rules.mk
 
 PKG_NAME:=smartdns
-PKG_VERSION:=2022-11-11
-PKG_RELEASE:=Release38.2RC
+PKG_VERSION:=2022-12-08
+PKG_RELEASE:=Release39
 
 PKG_SOURCE_PROTO:=git
 PKG_SOURCE:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.gz
 PKG_SOURCE_URL:=https://github.com/pymumu/smartdns.git
-PKG_SOURCE_VERSION:=934701941b740354d613cb1027275bd34d2415a4
+PKG_SOURCE_VERSION:=38a1782ec466b077b5884a9125ee4be2858d9502
 PKG_SOURCE_SUBDIR:=$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE)
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)/$(BUILD_VARIANT)/$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE)
 PKG_BUILD_PARALLEL:=1
